# bazel_for_odoo18

./: .gitignore  BUILD.bazel  MODULE.bazel  README.zh.me  bazel-bin  bazel-odoo18.0  bazel-out  bazel-testlogs  requirements.txt  requirements_lock_3_12.txt  utils.bzl
custom_addons/peng/: __manifest__.py
custom_addons/peng/controllers/: controllers.py
custom_addons/peng/demo/: demo.xml
custom_addons/peng/models/: models.py
custom_addons/peng/security/: ir.model.access.csv
custom_addons/peng/views/: views.xml
odoo/tools/: misc.py
